--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
       <!-- Begin Title Content -->
       <div class="page-title">
-        <h2>Every Story Has Heroes</h2>
-        <h3>We're 32 people on a journey to learn to love code.</h3>
+        <h2>Jomarie Polanco</h2>
+        <h3>I probably created break room tea corner at the office</h3>
       </div>
       <!-- End Title Content -->
 
@@ -85,7 +85,7 @@
       <div id="random-full-width-content" class="this-div-is-just-a-helpful-container">
         <div class="section section-services student-index">
           <div class="section-title">
-            <span>Flatiron School Class 003</span>
+            <span>Flatiron School Class 2020</span>
           </div>
         </div>
 
@@ -97,23 +97,23 @@
               <!-- Begin Student 1 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student name">
+                  <a href="students/jomarie_polanco.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/jomarie_polanco_index.jpeg" class="attachment-blog-thumb wp-post-image" alt="student name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/jomarie_polanco.html">Jomarie Polanco</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">I probably created break room tea corner at the office</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>A self-proclaimed health nut who will never say no to processed chicken nuggets. A lover of cats and tea. Doesn't mean I don't like dogs, I just really love cats.</p>
                 </div>
                 <div class="clear"></div>
               </li>
